# offer

./: 04.cpp  05.cpp  123.cpp  Blob.h  BlobPtr.h  C++.cpp  C++2.cpp  CMakeLists.txt  DebugDelete.h  Message.h  Persional_ID.h  QuerResult_tuple.h  QueryResult.h  Quote.h  Qurey.h  SP.h  Sales_data.h  Sales_data_error.h  Screen.h  StrBlob.h  StrBlobPtr.h  StrVec.h  TextQuery.h  Vec.h  animal.h  book1.txt  book2.txt  data.txt  findbook.h  newHash.h  regex2.txt  template_test.h  test_1029.txt  test_17.h  test_18.h  try_test.h
