cmake_minimum_required(VERSION 3.21)
project(offer)

set(CMAKE_CXX_STANDARD 14)

add_executable(offer  C++2.cpp  StrVec.h Message.h StrBlobPtr.h StrBlob.h Quote.h Qurey.h TextQuery.h QueryResult.h template_test.h Blob.h BlobPtr.h Screen.h Vec.h DebugDelete.h SP.h 123.cpp newHash.h QuerResult_tuple.h findbook.h test_17.h try_test.h Sales_data_error.h test_18.h animal.h)
